--- a/ControlAll/Star vorce lore/scratch.css
+++ b/ControlAll/Star vorce lore/scratch.css
@@ -9,8 +9,7 @@
     background: rgba(54, 79, 208, 0.32);
     display: inline-block;
     border-radius: 20px;
-    /*color: rgb(96, 96, 110);*/
-    color: black;
+    color: rgb(96, 96, 110);
 }
 body
 {
@@ -55,8 +54,9 @@ span
 }
 .text-start
 {
+
     font-family:"Lato-BlackItalic", sans-serif;
-url("./style/Lato-BlackItalic.ttf");
+    url("./style/Lato-BlackItalic.ttf");
 }
 div
 {
@@ -65,14 +65,38 @@ div
 }
 .cloud-city
 {
-    width: 500px;
+    width: 100%;
+    height: 100%;
     display: inline-block;
     color: slategray;
     background: aqua;
     border-radius: 20px;
 }
-
+.cloud-city2
+{
+    width: 100%;
+    height: 100%;
+    display: inline-block;
+    color: slategray;
+    background: aqua;
+    border-radius: 20px;
+}
 .chapter2
 {
-    text-align: right;
+    text-align: center;
+}
+.image-cloud-city
+{
+    text-align: left;
+}
+.cloudCityImage
+{
+    width: 1000px;
+    width: 789px;
+}
+.image-cloud-city
+{
+    display: block;
+    margin-right:1000px;
+    max-width: border-box;
 }
