--- a/ControlAll/Star vorce lore/scratch.css
+++ b/ControlAll/Star vorce lore/scratch.css
@@ -1,5 +1,8 @@
 
-
+.menu-button
+{    color: white;
+    border-radius: 10px;
+}
 #chapter_1
 {
     color: rgb(141, 143, 46);
@@ -74,15 +77,7 @@ url("./style/Lato-BlackItalic.ttf");
     background: aqua;
     border-radius: 20px;
 }
-.cloud-city2
-{
-    width: 100%;
-    height: 100%;
-    display: inline-block;
-    color: slategray;
-    background: aqua;
-    border-radius: 20px;
-}
+
 .chapter2
 {
     text-align: center;
@@ -111,30 +106,31 @@ url("./style/Lato-BlackItalic.ttf");
 
 .chapter3
 {
-    display: inline-block;
+    text-align: right;
 }
 .crait
 {
-    margin-left: 380px;
-    background: slategray;
-    color: black;
-    border-radius: 20px;
+    text-align: right;
+    width: 80%;
+    height: 80%;
     display: inline-block;
-    width: 65%;
-}
-.crait1
-{
-    margin-left: 380px;
-    background: slategray;
     color: black;
+    background: slategray;
     border-radius: 20px;
-    display: inline-block;
-    width: 65%;
 }
 
 .crait-imag1
 {
+    margin-right: 400px;
     display: inline;
     width: 29%;
 }
-
+.menu
+{
+    width: 100%;
+    background: black;
+    color: white;
+    position: fixed;
+    top: -2.5px;
+    text-transform: uppercase;
+}
