--- a/ControlAll/Star vorce lore/scratch.css
+++ b/ControlAll/Star vorce lore/scratch.css
@@ -1,136 +1,191 @@
 
-.menu-button
-{    color: white;
-    border-radius: 10px;
-}
-#chapter_1
-{
-    color: rgb(141, 143, 46);
-}
-.text-start
-{
-    background: rgba(54, 79, 208, 0.32);
-    display: inline-block;
-    border-radius: 20px;
-    color: rgb(96, 96, 110);
-}
-body
-{
-    background-image: url("./image/img.jpg");
-}
-.text-tatooine
-{
-    background: rgb(208, 218, 123);
-    color: rgb(96, 96, 110);
-    display: inline-block;
-    border-radius: 20px;
-    width: 48%;
-}
-.tatooine
-{
-    width: 48%;
-}
-.big-image-tatooine
-{
-    width: 60%;
-}
-.small-images-tatooine
-{
-    width: 25%;
-}
-h2
-{
-    color: rgb(96, 96, 110);;
-}
+    .menu-button
+    {    color: white;
+        border-radius: 10px;
+    }
+    #chapter_1
+    {
+        color: rgb(141, 143, 46);
+    }
+    .chapter1{
+        text-align: center;
+        display: block;
+    }
+    .text-start
+    {
+        background: rgba(54, 79, 208, 0.32);
+        display: inline-block;
+        border-radius: 20px;
+        color: rgb(96, 96, 110);
+    }
+    body
+    {
+        background-image: url("./image/img.jpg");
+    }
+    .chapter2{
+        text-align: center;
+    }
+    .text-tatooine
+    {
+        /*background: rgb(208, 218, 123);*/
+        /*color: rgb(96, 96, 110);*/
+        /*display: inline-block;*/
+        /*border-radius: 20px;*/
+        /*width: 48%;*/
+        width: 40%;
+        height: 40%;
+        display: inline-block;
+        color: slategray;
+        background: aqua;
+        border-radius: 20px;
+        margin: 20px;
+    }
+    /*.tatooine*/
+    /*{*/
+    /*    width: 48%;*/
+    /*}*/
 
-span
-{
-    font-family:"Lato-BlackItalic", sans-serif;
+    /*.big-image-tatooine*/
+    /*{*/
+    /*    width: 60%;*/
+    /*}*/
+    /*.small-images-tatooine*/
+    /*{*/
+    /*    width: 25%;*/
+    /*}*/
+
+    h2
+    {
+        color: rgb(96, 96, 110);;
+    }
+
+    span
+    {
+        font-family:"Lato-BlackItalic", sans-serif;
+        url("./style/Lato-BlackItalic.ttf");
+    }
+
+    .start
+    {
+        text-align: center;
+    }
+    span
+    {
+        line-height: 1.5em;
+    }
+    .text-start
+    {
+
+        font-family:"Lato-BlackItalic", sans-serif;
     url("./style/Lato-BlackItalic.ttf");
-}
+    }
+    div
+    {
+        font-family:"Lato-BlackItalic", sans-serif;
+    url("./style/Lato-BlackItalic.ttf");
+    }
+    .cloud-city
+    {
+        width: 40%;
+        height: 40%;
+        display: inline-block;
+        color: slategray;
+        background: aqua;
+        border-radius: 20px;
+        margin: 20px;
+    }
 
-.start
-{
-    text-align: center;
-}
-span
-{
-    line-height: 1.5em;
-}
-.text-start
-{
+    .chapter2
+    {
+        text-align: center;
+    }
+    .image-cloud-city
+    {
+        text-align: center;
+    }
+    .cloudCityImage
+    {
+        margin-left: 470px;
+        display: block;
+        width: 400px;
+    }
+    /*.image-cloud-city*/
+    /*{*/
+    /*    display: inline;*/
+    /*    margin-right:1000px;*/
+    /*    max-width: border-box;*/
+    /*}*/
+    .cloudCityImage1
+    {
+        display: inline;
+        width: 400px;
+        max-width: border-box;
+    }
 
-    font-family:"Lato-BlackItalic", sans-serif;
-url("./style/Lato-BlackItalic.ttf");
-}
-div
-{
-    font-family:"Lato-BlackItalic", sans-serif;
-url("./style/Lato-BlackItalic.ttf");
-}
-.cloud-city
-{
-    width: 100%;
-    height: 100%;
-    display: inline-block;
-    color: slategray;
-    background: aqua;
-    border-radius: 20px;
-}
+    .chapter3
+    {
+        text-align: center;
+    }
+    .crait
+    {
+        width: 40%;
+        height: 40%;
+        display: inline-block;
+        color: black;
+        background: slategray;
+        border-radius: 20px;
+    }
 
-.chapter2
-{
-    text-align: center;
-}
-.image-cloud-city
-{
-    text-align: left;
-}
-.cloudCityImage
-{
-    display: inline;
-    width: 550px;
-}
-.image-cloud-city
-{
-    display: inline;
-    margin-right:1000px;
-    max-width: border-box;
-}
-.cloudCityImage1
-{
-    display: inline;
-    width: 570px;
-    max-width: border-box;
-}
+    .crait-imag1
+    {
+        width: 30%;
+        height: 30%;
+    }
+    .menu
+    {
+        width: 100%;
+        background: black;
+        color: white;
+        position: fixed;
+        top: -2.5px;
+        text-transform: uppercase;
+    }
+    .float {
+        margin-left: -24px;
+        /*border: 20px solid indianred;*/
+        border: 20px solid greenyellow;
+        border-radius: 20px;
+        height: 100%;
+        width: 300px;
+        float: right;
+        position: fixed;
+        top: 50px;
+        background-color: black;
+        color: slategrey;
+        overflow: scroll;
+    }
+    .float1{
+        margin-left: 1045px;
+        border: 20px solid indianred;
+        border-radius: 20px;
+        height: 100%;
+        width: 300px;
+        float: right;
+        position: fixed;
+        top: 50px;
+        background-color: black;
+        color: slategrey;
+        overflow: scroll;
+    }
 
-.chapter3
-{
-    text-align: right;
-}
-.crait
-{
-    text-align: right;
-    width: 80%;
-    height: 80%;
-    display: inline-block;
-    color: black;
-    background: slategray;
-    border-radius: 20px;
-}
+    a:link{
+        color: deepskyblue;
+    }
+    a:hover{
+        color: purple;
+    }
+    a:visited{
+        color: aquamarine;
+    }
 
-.crait-imag1
-{
-    margin-right: 400px;
-    display: inline;
-    width: 29%;
-}
-.menu
-{
-    width: 100%;
-    background: black;
-    color: white;
-    position: fixed;
-    top: -2.5px;
-    text-transform: uppercase;
-}
+    li
